@@ -9,6 +9,7 @@ import com.site.pine.entity.post.Post;
 import com.site.pine.repository.MemberRepository;
 import com.site.pine.repository.PostRepository;
 import com.site.pine.repository.ReplyRepository;
+import com.site.pine.repository.like.ReplyLikeRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
@@ -17,6 +18,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -26,6 +28,7 @@ public class ReplyService {
     private final MemberRepository mr;
     private final ReplyRepository rr;
     private final PostRepository pr;
+    private final ReplyLikeRepository rlr;
 
     @Transactional
     public ReplyResDto createReply(MemberDto mdto, ReplyCreateReqDto reqDto) {
@@ -63,12 +66,12 @@ public class ReplyService {
         // 현재 메모리에 있는 post 객체의 카운트도 1 올려줌 (DTO 변환용)
         post.setReplyCount(post.getReplyCount() + 1);
 
-        return ReplyResDto.from(reply);
+        return ReplyResDto.from(reply, false, false);
 
     }
 
     @Transactional(readOnly = true)
-    public Page<ReplyResDto> getReplyList(Long postId, Pageable pageable) {
+    public Page<ReplyResDto> getReplyList(Long postId, Pageable pageable, Long memberId) {
         // 1. 게시글 존재 여부 확인
          Post post = pr.findById(postId).orElseThrow(() -> new IllegalStateException("존재하지 않는 게시글 입니다."));
 
@@ -76,23 +79,45 @@ public class ReplyService {
         // 자식 댓글들은 @BatchSize 설정 덕분에 DTO 변환 시점에 자동으로 효율적으로 가져와짐
         Page<Reply> parentReplies = rr.findParentReplies(postId, pageable);
 
+        // 로그인한 멤버 엔티티 (좋아요 체크용)
+        Member currentMember = (memberId != null)
+                ? mr.findById(memberId).orElse(null)
+                : null;
+
         // from(entity, false) -> 자식 데이터는 쿼리하지 않고, childCount만 가져감
-        return parentReplies.map(reply -> ReplyResDto.from(reply, false));
+        return parentReplies.map(reply -> {
+            boolean isLiked = false;
+            if (currentMember != null) {
+                // DB에서 좋아요 여부 확인
+                isLiked = rlr.findByReplyAndMember(reply, currentMember).isPresent();
+            }
+            return ReplyResDto.from(reply, false, isLiked);
+        });
     }
 
     // 대댓글 더보기 클릭 시 호출될 메서드
     @Transactional(readOnly = true)
-    public List<ReplyResDto> getChildReplies(Long parentId) {
+    public List<ReplyResDto> getChildReplies(Long parentId, Long memberId) {
         // 부모가 존재하는지 확인
         Reply parent = rr.findById(parentId).orElseThrow(() -> new IllegalStateException("부모 댓글이 존재하지 않습니다."));
 
         // 자식들 조회
         List<Reply> children = rr.findChildReplies(parentId);
 
+        Member currentMember = (memberId != null)
+                ? mr.findById(memberId).orElse(null)
+                : null;
+
         // 자식들을 DTO로 변환
         return children.stream()
-                .map(reply -> ReplyResDto.from(reply, false))
-                .toList();
+                .map(reply -> {
+                    boolean isLiked = false;
+                    if (currentMember != null) {
+                        isLiked = rlr.findByReplyAndMember(reply, currentMember).isPresent();
+                    }
+                    return ReplyResDto.from(reply, false, isLiked);
+                })
+                .collect(Collectors.toList());
     }
 
     @Transactional
